# Space

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
Resources/: gamecontrollerdb.txt
Resources/Models/: Ship_test.fbx  ally_ship.glb  black_hole.fbx  cartoon_spaceship_blue.fbx  cartoon_spaceship_red.fbx  checkpoint.fbx  enemy_ship.fbx  enemy_ship.glb  laser_shot.glb  moon.fbx  player_ship.fbx  quad_sphere.glb  rock_01.fbx  rock_01.glb  rock_02.fbx  rock_02.glb  rock_02glb.glb  sun.fbx  x-wing.fbx
Resources/Textures/: rock_01.tga  rock_01_normal.tga  rock_01_roughness.tga  rock_02.tga  rock_02_normal.tga  rock_02_roughness.tga
Source/: AssetManager.cpp  AssetManager.hpp  Main.cpp  Random.hpp  SpaceApp.cpp  SpaceApp.hpp
Source/Components/: AIControlledComponent.hpp  AlwaysRenderedComponent.hpp  DecayComponent.hpp  EnemyComponent.hpp  HealthComponent.hpp  LaserGunComponent.hpp  ModelComponent.hpp  PlayerComponent.hpp  RigidBodyComponent.hpp  SpaceShipControlComponent.hpp  SphereColliderComponent.hpp  SquadComponent.hpp  TransformComponent.hpp
Source/Containers/: ArenaAllocator.hpp  Frustum.cpp  Frustum.hpp  LockFreeArray.hpp  Octree.cpp  Octree.hpp
Source/Events/: ApplyForceEvent.hpp  ApplyTorqueEvent.hpp  CollisionEvent.hpp  KeyDownEvent.hpp  KeyUpEvent.hpp  MouseMoveEvent.hpp  OctreeFinishedEvent.hpp  TransformChangeEvent.hpp
Source/Systems/: AIControlSystem.cpp  AIControlSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DecaySystem.cpp  DecaySystem.hpp  EnemyControlSystem.cpp  EnemyControlSystem.hpp  InputSystem.cpp  InputSystem.hpp  LaserGunSystem.cpp  LaserGunSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  OctreeSystem.cpp  OctreeSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerCameraSystem.cpp  PlayerCameraSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpaceShipSystem.cpp  SpaceShipSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp
